// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`N-API Off: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`N-API Off: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
  "query-engine-debian-openssl-1.1.x",
]
`;

exports[`N-API Off: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`N-API Preview Feature: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`N-API Preview Feature: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
  "query-engine-debian-openssl-1.1.x",
]
`;

exports[`N-API Preview Feature: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;
